# AI-Invest-Assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/analytics/: indicators.py  risk.py
app/api/routes/: advice.py  backtests.py  market.py  news.py  portfolios.py  symbols.py  system.py
app/backtesting/: engine.py  metrics.py  portfolio_engine.py  reports.py
app/data_sources/: base.py  registry.py
app/data_sources/market/: futures.py  stooq_provider.py  (+1 more)
app/db/: models.py  session.py
app/ingestion/: dedupe.py  market_ingestor.py  news_ingestor.py  normalize.py
app/llm/: client.py  prompts.py  structured_outputs.py  tools.py
app/portfolio/: data.py  optimization.py  risk.py  strategies.py
app/recommendations/: market_brief.py  risk_gate.py  strategy_selector.py  trade_advisor.py
app/scheduler/: jobs.py  scheduler.py
app/schemas/: advice.py  llm.py  market.py  news.py  portfolio.py  strategy.py
app/strategies/: __init__.py  base.py  momentum.py  moving_average.py  rsi.py
app/ui/: streamlit_app.py
scripts/: generate_daily_brief.py  ingest_market.py  ingest_news.py  run_backtest.py
scripts/deploy/: run_local.sh  smoke_api.py  verify_local.sh
tests/: conftest.py
tests/integration/: test_api_smoke.py  test_portfolios_api.py
tests/unit/: test_backtesting.py  test_futures_symbols.py  test_market_ingestor.py  test_portfolio_backtesting.py  test_portfolio_optimization.py  test_portfolio_risk.py  test_portfolio_strategy.py  test_risk_gate.py  test_schemas.py
(+1 files in other folders)
